--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.1",
     "canvas": "^2.11.2",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.10",
     "feed": "^4.2.2",
     "gitalk": "^1.8.0",
+    "lucide-react": "^0.378.0",
     "mermaid": "^10.6.1",
     "next": "^14.0.2",
     "notion-client": "^6.16.0",
@@ -38,6 +43,8 @@
     "react-notion-x": "^6.16.0",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.4.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-ackee": "^3.0.1"
   },
   "devDependencies": {
